@startuml PersonPackage

' Person base class
class Person {
  - name: String
  - address: String
  - phoneNumber: String
  - email: String
  + Person(name: String, address: String, phoneNumber: String, email: String)
  + getName(): String
  + getAddress(): String
  + getPhoneNumber(): String
  + getEmail(): String
  + toString(): String
}

' Student subclass
class Student {
  - status: String
  + Student(name: String, address: String, phoneNumber: String, email: String, status: String)
  + toString(): String
  {static} FRESHMAN
  {static} SOPHOMORE
  {static} JUNIOR
  {static} SENIOR
}

' Employee subclass
class Employee {
  - office: String
  - salary: double
  + Employee(name: String, address: String, phoneNumber: String, email: String, office: String, salary: double)
  + toString(): String
}

' Faculty subclass
class Faculty {
  - officeHours: String
  - rank: String
  + Faculty(name: String, address: String, phoneNumber: String, email: String, office: String, salary: double, officeHours: String, rank: String)
  + toString(): String
}

' Staff subclass
class Staff {
  - title: String
  + Staff(name: String, address: String, phoneNumber: String, email: String, office: String, salary: double, title: String)
  + toString(): String
}

Person <|-- Student
Person <|-- Employee
Employee <|-- Faculty
Employee <|-- Staff

@enduml